# Graphisque

./: .clang-format  .gitignore  CMakeLists.txt
include/Graphisque/: Application.h  Axes.h  Buffer.h  Camera.h  Cube.h  Equations.h  GLBuffer.h  GLVertexArray.h  Globals.h  Grid.h  Grid3D.h  IRenderable.h  Shader.h
include/glad/: glad.h
shaders/: fragment.frag  grid.frag  grid.vert  grid3d.frag  grid3d.vert  vertex.vert
src/: Application.cpp  CMakeLists.txt  Camera.cpp  Cube.cpp  Globals.cpp  Grid.cpp  Grid3D.cpp  Shader.cpp  glad.c  main.cpp
